# eqemu-mobile-client

./: .gitignore  Cargo.toml  README.md  bam_glb.json  bam_gltf.json  bam_gltf_fixed.json  bam_gltf_real.json  extract_json.mjs  extract_sage_local.mjs  get_glb_json.mjs  inspect_glb.py  log.txt  package.json  soldier_gltf.json  teleport_script.js  test_combat.py  test_handshake.py  test_libs.mjs
public/: game.js  index.html  styles.css  ui.css
src/: client.rs  crc.rs  crypto.rs  main.rs  packets.rs  udp_engine.rs  web_ui.rs  zone_state.rs
web/: audit.html  audit_utils.js  bam2_frags.txt  bam_frags.txt  bam_scan_results.txt  bamhe_log.txt  bamhe_log2.txt  bamhe_log3.txt  bamhe_meshes.txt  brute_scan.mjs  check_gequip.mjs  chr_files.txt  debug_face_toggle.js  deep_scan.mjs  dump_bam.txt  dump_glb_json.mjs  dump_hierarchy.mjs  dump_meshes.mjs  dump_verts.mjs  extract_head_obj.mjs  extract_sage.mjs  extraction_log.txt  extraction_log_final.txt  find_bam.mjs  game.js  gen_debug.py  generate_debug_tex.mjs  gequip_bam.txt  get_anims.mjs  global_chr_frags.txt  index.html  inspect_actor.mjs  inspect_glb.mjs  list_frags.mjs  list_s3d_models.mjs  meshes.txt  multi_scan.mjs  render_head_obj.py  scan_armor.mjs  scan_bam.mjs  (+10 more)
web/assets/: R491_DMSPRITEDEF.mtl  bam.glb  file_12430F2F.dds  file_1CEE39AA.dds  file_1DBA05B2.dds  file_211F20F2.dds  file_21F18BC6.dds  file_300E3DD0.dds  file_374E15B3.dds  file_3AD986BE.dds  file_3FDA2687.dds  file_474A2AA2.dds  file_4AFDC737.dds  file_5BEA1D66.dds  file_5C6227DA.dds  file_65AA897B.dds  file_74FA0AD.dds  file_C899C4E.dds  file_FEE1848.dds  (+8 more)
(+394 files in other folders)
