[package]
name = "MobileClient"
version = "0.1.0"
edition = "2021"

[dependencies]
binrw = "0.11"
tokio = { version = "1", features = ["full"] }
rand = "0.8"
byteorder = "1.4"
des = "0.8"
cbc = "0.1"
async-recursion = "1.1.1"
socket2 = { version = "0.5.5", features = ["all"] }
flate2 = "1.0"
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-tungstenite = "0.20"
futures = "0.3"
bytes = "1.5"
parking_lot = "0.12"
